--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 db:
-  host: '127.0.0.1'
+  host: 'db'
   port: '5432'
   db_name: 'shop'
   username: 'postgres'
-  password: 'baksBany08'
+  password: 'postgres'
   migration_path: 'migrations/pg'
